bk_ida/gccida/c3/order_regs_for_reload
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2094:12: error: expected expression
*( _OWORD *)spill_cost = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2094:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)spill_cost = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2095:12: error: expected expression
*( _OWORD *)&spill_cost[4] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2095:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&spill_cost[4] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2096:12: error: expected expression
*( _OWORD *)&spill_cost[8] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2096:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&spill_cost[8] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2097:12: error: expected expression
*( _OWORD *)&spill_cost[12] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2097:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&spill_cost[12] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2098:12: error: expected expression
*( _OWORD *)&spill_cost[16] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2098:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&spill_cost[16] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2099:12: error: expected expression
*( _OWORD *)&spill_cost[20] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2099:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&spill_cost[20] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2100:12: error: expected expression
*( _OWORD *)&spill_cost[24] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2100:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&spill_cost[24] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2101:12: error: expected expression
*( _OWORD *)&spill_cost[28] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2101:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&spill_cost[28] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2102:12: error: expected expression
*( _OWORD *)&spill_cost[32] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2102:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&spill_cost[32] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/reload1.c:2103:12: error: expected expression
*( _OWORD *)&spill_cost[36] = 0LL; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/order_regs_for_reload/src/obj/reload1.o] Error 1
